--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 html
 <h1>Danças tradicionais Gaúchas</h1>
 
-<p>As aulas tradicionais gaúchas propriciam aos praticantes além de conhecimento e preservação dessa cultura, também insentiva a prática de atividades físicas e o lazer.</p>
+<p>As aulas tradicionais gaúchas propriciam aos praticantes o conhecimento e preservação dessa cultura, além de insentivar a prática de atividades físicas e o lazer.</p>
 <p>Venha participar com a gente e se divertir!</p> 
 <p>Traga toda sua família!</p>
 <p>Aulas todos os domingos às 18 hrs.</p>
