--- a/index.html
+++ b/index.html
@@ -1,8 +1,30 @@
-html
-<h1>Danças tradicionais Gaúchas</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <title> Aulas de danças Gaúchas tradicionais </title>  
+    <link rel="stylesheet" href="style.css">
 
-<p>As aulas tradicionais gaúchas propriciam aos praticantes o conhecimento e preservação dessa cultura, além de insentivar a prática de atividades físicas e o lazer.</p>
+</head>
+<body>
+<h1>Danças tradicionais Gaúchas</h1>
+<p>As aulas tradicionais de danças folclóricas gaúchas propriciam aos praticantes o conhecimento e preservação dessa cultura, além de incentivar a prática de atividades físicas e o lazer.</p>
+<p>Em nossas aulas você vai aprender os seguintes ritmos:</p>
+<p>- Vaneira </p>
+<p>- Chote </p>
+<p>- Rancheira</p>
+<p>- Valsa</p>
+<p>- Milonga</p>
+<p>- Chamamé</p>
+<p>- Bugio</p>
 <p>Venha participar com a gente e se divertir!</p> 
 <p>Traga toda sua família!</p>
-<p>Aulas todos os domingos às 18 hrs.</p>
+<p><strong>Aulas todos os domingos às 18 hrs.</strong></p>
+</body>
+</html>
+
+
+
+
+
 
