--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <p>- Bugio</p>
 <p>Venha participar com a gente e se divertir!</p> 
 <p>Traga toda sua família!</p>
-<p><strong>Aulas todos os domingos às 18 hrs.</strong></p>
+<p><strong><em>Aulas todos os domingos às 18 hrs.</em></strong></p>
 </body>
 </html>
 
