--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 
 </head>
 <body>
-<h1>Danças tradicionais Gaúchas</h1>
+<h1>Danças Tradicionais Gaúchas</h1>
 <p>As aulas tradicionais de danças folclóricas gaúchas propriciam aos praticantes o conhecimento e preservação dessa cultura, além de incentivar a prática de atividades físicas e o lazer.</p>
+<p>As modalidades do curso tornam os participantes aptos a dançar bailes em qualquer região do país e usar a tradicional pilcha, traje típico dos peões e prendas.</p>
 <p>Em nossas aulas você vai aprender os seguintes ritmos:</p>
 <p>- Vaneira </p>
 <p>- Chote </p>
@@ -19,7 +20,8 @@
 <p>- Bugio</p>
 <p>Venha participar com a gente e se divertir!</p> 
 <p>Traga toda sua família!</p>
-<p><strong><em>Aulas todos os domingos às 18 hrs.</em></strong></p>
+<p id="horário" strong><em>Aulas todos os domingos às 18 hrs.</em></strong></p>
+<img src="dançagaucha.png" alt="Grupo de dança do CTG os Guri De Quitandinha" class="imagem 1" 
 </body>
 </html>
 
