Atualização das divisões

--- a/index.html
+++ b/index.html
@@ -10,18 +10,26 @@
 <h1>Danças Tradicionais Gaúchas</h1>
 <p>As aulas tradicionais de danças folclóricas gaúchas propriciam aos praticantes o conhecimento e preservação dessa cultura, além de incentivar a prática de atividades físicas e o lazer.</p>
 <p>As modalidades do curso tornam os participantes aptos a dançar bailes em qualquer região do país e usar a tradicional pilcha, traje típico dos peões e prendas.</p>
-<p>Em nossas aulas você vai aprender os seguintes ritmos:</p>
-<p>- Vaneira </p>
-<p>- Chote </p>
-<p>- Rancheira</p>
-<p>- Valsa</p>
-<p>- Milonga</p>
-<p>- Chamamé</p>
-<p>- Bugio</p>
+<div>
+    <p div class="Ritmos"> Em nossas aulas você vai aprender os seguintes ritmos:</p>
+        <ul div class="item">
+            
+            <li><p> Vaneira</p></li>
+            <li><p> Chote</p></li>
+            <li><p> Rancheira</p></li>
+            <li><p> Valsa</p></li>
+            <li><p> Milonga</p></li>
+            <li><p> Chamamé</p></li> 
+            <li><p> Bugio</p></li>
+        </ul>
+       
+    <img src="dançagaucha.png" alt="Grupo de dança do CTG os Guri De Quitandinha" class="imagem1" 
+</div>
+
 <p>Venha participar com a gente e se divertir!</p> 
 <p>Traga toda sua família!</p>
 <p id="horário" strong><em>Aulas todos os domingos às 18 hrs.</em></strong></p>
-<img src="dançagaucha.png" alt="Grupo de dança do CTG os Guri De Quitandinha" class="imagem 1" 
+
 </body>
 </html>
 
